<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EFEF"
    tools:context=".screens.SignIn">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/createAnAccount"
        android:textColor="#292828"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="240dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="72dp"
        android:text="@string/letsHelpYouSetYourAccount"
        android:textColor="#292828"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="140dp"
        android:text="@string/email"
        android:textColor="#292828"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="32dp"
        android:paddingLeft="32dp"
        android:textColor="#292828"
        android:textColorHint="#F7858080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textColor="#292828"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <EditText
        android:id="@+id/password"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="32dp"
        android:paddingLeft="32dp"
        android:textColor="#292828"
        android:textColorHint="#F7858080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmPasswordlabel"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:text="@string/confirmPassword"
        android:textColor="#292828"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/enterConfirmPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="32dp"
        android:paddingLeft="32dp"
        android:textColor=" #292828"
        android:textColorHint="#F7858080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordlabel"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordlabel" />

    <Button
        android:id="@+id/signbtn"
        android:layout_width="322dp"
        android:layout_height="64dp"
        android:layout_marginTop="492dp"
        android:backgroundTint="#129575"
        android:text="@string/signUp"
        android:textColor="#FDFBFB"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="48dp"
        android:text="@string/orSignInWith"
        android:textColor="#292828"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signbtn" />

    <View
        android:id="@+id/divider3"
        android:layout_width="32dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/signbtn" />

    <View
        android:id="@+id/divider2"
        android:layout_width="32dp"
        android:layout_height="1dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signbtn" />

    <ImageView
        android:id="@+id/googleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:src="@drawable/icons8_google_240_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/dontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/alreadyAMember"
        android:textColor="#292828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignIn" />

    <TextView
        android:id="@+id/switchAuth"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/signIn"
        android:textColor="#FF9C00"
        app:layout_constraintStart_toEndOf="@+id/dontHaveAnAccount"
        app:layout_constraintTop_toTopOf="@+id/dontHaveAnAccount" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>