<!-- bottom_sheet_layout.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/btmCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/btmCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/btmIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredient" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
